# Inspector_bottles

./: .claudeignore  .cursorignore  .gitignore  .gitmessage  .graphifyignore  .ignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  GIT_WORKFLOW_BEGINNER.md  Makefile  README.md  STEP_10_COMPLETION_REPORT.md  _salvage_digest.md  code.txt  color.py  color_process.py  combine_files.py  combined_code.txt  combined_code_anton.txt  fix_phone_firewall.bat  graph_module.py  launcher.bat  main.py  main.pyw  promt.md  pyproject.toml  requirements.txt  run.py  test.py  value_settings.xlsx
Inspector_prototype/: .coverage  UNIFICATION_PLAN.md  detections.txt  detections_sample.csv  detections_table.txt  main.py  pyproject.toml
Inspector_prototype/App/: ARCHITECTURE.md  ConfigManager.py  NEW_ARCHITECTURE.md  STATUS.md  StyleManager.py  VersionManager.py  main_app.py  resource_paths.py
Inspector_prototype/App/Components/: app_config.py  base_configurable_widget.py  data_manager.py  data_manager_old.py.backup  header.py  params_manager.py  slider.py  slider_enhanced.py  sort_widget.py  structured_table.py
Inspector_prototype/App/Core/: ARCHITECTURE.md  __init__.py  app_config.py  base_configurable_widget.py
Inspector_prototype/App/Data/: app_config.json
Inspector_prototype/App/Managers/: README.md  camera_manager.py  converter_manager.py  data_manager.py  error_manager.py  logging_manager.py  recipe_manager.py  region_manager.py  window_manager.py
Inspector_prototype/App/Registers/: ARCHITECTURE.md  README.md  __init__.py  converters.py  manager.py
Inspector_prototype/App/Threads/: thread_bot_message.py  thread_camera_message.py  thread_image_update.py  thread_loading.py
Inspector_prototype/App/Windows/: main_window copy.py  main_window.py  main_window_old2.py  main_windows_old.py  neuroun_window.py  test_neuroun copy.py  window_loading.py
Inspector_prototype/App/docs/: APP_MODULES.md  APP_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_EVALUATION.md  DATA_ARCHITECTURE.md  METADATA_USAGE.md  README.md  RECOMMENDATIONS.md  SIMPLIFICATION_EXAMPLE.md  STRUCTURE.md
Inspector_prototype/Data/: app_config.json
Inspector_prototype/Data/Recipes/: value_settings.yaml
Inspector_prototype/Multiproccesing/: Memory_Manager.py  Processes_Manager.py  Queue_Manager.py
Inspector_prototype/Multiproccesing/Processes/: process_image_source.py  process_overlay.py  process_post_processing.py  process_processing.py  process_region_merger.py  process_region_processor.py  process_region_processor_2.py
Inspector_prototype/Services/Operation_crop/: __init__.py  base.py  chain.py  regions.py
Inspector_prototype/Services/Region_processors/: __init__.py  bgr_processor.py  grayscale_processor.py
Inspector_prototype/Utils/: frame_fps.py  new_frame_fps.py  new_frame_fps_optimz.py
Inspector_prototype/Utils/file_comments/: README.md  __init__.py  __main__.py  cli.py  commenter.py  config.example.json  config.py  file_utils.py  stats.py
Inspector_prototype/Utils/fps_module/: README.md  STATUS.md  __init__.py  benchmark.py
Inspector_prototype/docs/refactors/: 2026-04_widgets_reorg.md
Inspector_prototype/framework_minimal_prototype/: README.md  __init__.py  main.py
Inspector_prototype/framework_minimal_prototype/backend/: __init__.py
Inspector_prototype/hikvision_camera_module/: README.md  STATUS.md  __init__.py  __main__.py
Inspector_prototype/hikvision_camera_module/adapters/: process_adapter.py
Inspector_prototype/hikvision_camera_module/core/: capture.py  facade.py
Inspector_prototype/hikvision_camera_module/sdk/: __init__.py
Inspector_prototype/hikvision_camera_module/sdk_app/: clean_camera_test.py
Inspector_prototype/hikvision_camera_module/tests/: __init__.py  conftest.py  test_facade.py
Inspector_prototype/inspector_prototype.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Inspector_prototype/logs/: stats_TestStats.json
Inspector_prototype/multiprocess_framework/: ARCHITECTURE.md  ASSESSMENT.md  DECISIONS.md  DOCUMENTATION_INDEX.md  MODULES_STATUS.md  PROBLEMS.md  README.md  ROADMAP.md  SPEC.md  STRUCTURE.md  __init__.py
Inspector_prototype/multiprocess_framework/core/: __init__.py  logging_facade.py
Inspector_prototype/multiprocess_framework/docs/: ADR_REGISTRY.md  ARCHITECTURE_MODULE_CATALOG.md  ARCHITECTURE_REFERENCE.md  CONFIG_GUIDE.md  CONFIG_SCHEMA_REGISTERS.md  CONFIG_UNIFICATION_PLAN.md  DESIGN_RULES.md  EXTENSION_GUIDE.md  FRAMEWORK_OVERVIEW.md  FRONTEND_COMMAND_LAUNCHER_ROADMAP.md  INTERACTION_FLOWS.md  MODULES_OVERVIEW.md  MODULE_CONTRACTS.md  MODULE_README_TEMPLATE.md  QUICK_START.md  README.md  ROUTING_GLOSSARY.md  TROUBLESHOOTING.md
Inspector_prototype/multiprocess_framework/examples/: chat_app_declarative.py  multiprocess_chat_app copy.py  processes_chat.yaml  pyqt_example.py
Inspector_prototype/multiprocess_framework/modules/: __init__.py  pytest.ini
Inspector_prototype/multiprocess_framework/modules (no work!!!) go refactored/: DO_NOT_TOUCH_LEGACY.md  __init__.py
Inspector_prototype/multiprocess_framework/modules (no work)/: __init__.py
Inspector_prototype/multiprocess_framework/refactored/: ARCHITECTURE_ESSAY.md  ARCHITECTURE_REFERENCE.md  CLEANUP_SUMMARY.md  DECISIONS.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_SCORE.md  DOCUMENTATION_SUMMARY.md  FRAMEWORK_INTEGRATION_SUMMARY.md  FRAMEWORK_OVERVIEW.md  MODULES_STATUS.md  README.md  UNIFIED_ARCHITECTURE.md  __init__.py  run_all_tests.py
Inspector_prototype/multiprocess_prototype/: .inspector_prefs.json  PLAN.md  PLAN_ORIGINAL.md  README.md  STATUS.md  __init__.py  main.py  prefs.py  run.py  run.sh
Inspector_prototype/multiprocess_prototype_v2/: __init__.py  main.py  run.py
Inspector_prototype/multiprocess_prototype_v3/: README.md  __init__.py  app_config.py  camera_policy.py  conftest.py  main.py  run.py
Inspector_prototype/processes/: database_process.py
Inspector_prototype/scripts/: _test_bundle_queue.py  _test_phase1.py  _test_phase2.py  _test_phase3.py  reorganize_decisions.py  run_framework_tests.py  validate.py
(+8297 files in other folders)
