[project]
name = "inspector-bottles"
version = "0.1.0"
description = "Multiprocess framework for bottle inspection — camera-based defect detection"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Core framework
    "pydantic>=2.13",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.49",  # asyncio extras = greenlet для async-адаптера
    "numpy>=2.4,<3",
    "PyYAML>=6.0",
    "psutil>=7.0",
    # GUI (Phase 2 завершена: миграция PyQt5 → PySide6)
    "pyside6>=6.8,<6.11",
    "QDarkStyle>=3.2",
    # Node graph editor (Phase 9) — fork от C3RV1 для PySide6, гибридный режим
    "NodeGraphQt",
    "Qt.py>=1.4",  # транзитивная зависимость NodeGraphQt
    # Vision / image
    "opencv-python>=4.13,<5",
    "Pillow>=12.0",
    # Data / plotting
    "pandas>=2.2",
    "matplotlib>=3.9",
    "plotly>=5.24",
    "seaborn>=0.13",
    "openpyxl>=3.1",
    # Camera (GigE Vision) — нет ARM-колёс genicam, пропускаем на macOS ARM
    "harvesters>=1.4; sys_platform != 'darwin' or platform_machine != 'arm64'",
    # Auth
    "bcrypt>=4.1",
    # Logging
    "loguru>=0.7",
    # Network / utils
    "requests>=2.32",
    "environs>=11.0",
    # Simulation
    "pygame>=2.6",
    # Async testing — было в стейл inner pyproject
    "pytest-asyncio>=0.24",
    "setuptools>=82.0.1",
]

[project.scripts]
# Единая команда запуска: venv-guard (run:launch) → main → главный конфиг app.yaml.
inspector = "multiprocess_prototype.run:launch"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.24",
    "pytest-qt>=4.4", # qt_api = "pyside6", фикстура qtbot
    "pytest-cov>=6.0", # coverage-отчёты
    "ipykernel>=6.29",
    "aiosqlite>=0.20", # для тестов async SQL-адаптера
    "pyright>=1.1.408", # gradual type checking (replaces mypy)
    "ruff>=0.15", # linter + formatter (pre-commit ставит свой, дублируем для make lint без активной venv)
    "bandit>=1.9", # security scanning (OWASP basics)
    "pre-commit>=4.6.0",
    "qt-mcp",
]
diagrams = [
    "pylint>=3.3",      # pyreverse для UML-диаграмм классов
    "pydeps>=3.0",      # граф зависимостей модулей
]

[project.optional-dependencies]
# ML stack — добавится в Phase 1.5 после успешного перехода на 3.12
# ml = [
#     "torch>=2.11",
#     "torchvision>=0.26",
#     "ultralytics>=8.3",
#     "onnxruntime>=1.20",
# ]

[tool.uv.sources]
# NodeGraphQt-PySide6 — fork от C3RV1, не публикуется на PyPI.
# Sha-pin для воспроизводимости (последний коммит на master 2023-01-08).
NodeGraphQt = { git = "https://github.com/C3RV1/NodeGraphQt-PySide6.git", rev = "7fa60017" }
qt-mcp = { git = "https://github.com/0xCarbon/qt-mcp.git" }

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = [
    "multiprocess_framework/refactored",
    "multiprocess_framework/modules/state_store_module/tests",
    "multiprocess_prototype/tests",
    "multiprocess_prototype/state_store/tests",
]
# multiprocess_prototype_backup/ — frozen snapshot предыдущей структуры (см. CLAUDE.md).
# Имена тестов совпадают с актуальным multiprocess_prototype/tests/, что вызывает
# file-collision при ручном указании файла или IDE discovery → исключаем явно.
norecursedirs = ["multiprocess_prototype_backup", ".git", "__pycache__", ".venv"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --ignore=multiprocess_prototype_backup"
filterwarnings = [
    # Task F.7 (Phase F / cross-tab): forcing-функция против регрессии. Прямой
    # ctx.extras[...]/get() с мигрированным ключом из потребителя (презентер/таб) валит тест
    # → используй services.X (AppServices). Легитимный bridge (build_app_services + аксессоры
    # AppContext) читает через ctx.extras.peek()/peek_required() и не триггерит warning.
    # ВАЖНО: фильтр по ТЕКСТУ сообщения, а не module-scoped: warning эмитится со stacklevel=3
    # и атрибутируется вызывающему модулю, а не _deprecated_extras (старый фильтр был no-op).
    'error:ctx\.extras.*deprecated:DeprecationWarning',
]
qt_api = "pyside6"

# ── pyright ──
# Запуск:  pyright multiprocess_framework multiprocess_prototype
# Режимы:  basic (старт) → standard → strict — повышать по мере чистки типов.
# Подробнее: https://microsoft.github.io/pyright/#/configuration
#
# Gradual-стратегия (см. pyright_report.json после первого прогона, ~700 диагностик):
#   - "none"     — шумные правила, ловящие не баги, а особенности PySide6/динамики
#   - "warning"  — реальные подозрения на баги, не блокируем CI пока не разгребём
#   - "error"    — добавлять по мере чистки долга
[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "All"
include = ["multiprocess_framework", "multiprocess_prototype"]
exclude = [
    "**/multiprocess_prototype_backup",
    "**/tests",
    "**/__pycache__",
    "**/.venv",
]
typeCheckingMode = "basic"
# ── stubs / impport ──
reportMissingImports = "warning"       # аналог mypy.ignore_missing_imports
reportMissingTypeStubs = "none"        # PySide6 / OpenCV / Ultralytics — без стабов
# ── шум PySide6 / mixin / register schemas ──
reportAttributeAccessIssue = "none"    # 388 hits: Qt signals, mixin attrs, dynamic schemas
reportOptionalMemberAccess = "none"    # 79 hits: Optional[X] без unwrap (на границах GUI)
reportOptionalSubscript = "none"
reportOptionalCall = "none"
reportUnsupportedDunderAll = "none"    # условный re-export __all__.extend(...)
# ── подозрения на баги — warning, не падаем ──
reportArgumentType = "warning"
reportReturnType = "warning"
reportCallIssue = "warning"
reportInvalidTypeForm = "warning"
reportIndexIssue = "warning"
reportAssignmentType = "warning"
reportGeneralTypeIssues = "warning"
reportUnboundVariable = "warning"

# ── bandit ──
[tool.bandit]
# scripts/ — dev-утилиты (changelog_gen, link_check, validate_commit, …);
# subprocess/urllib в них by design (git log, HTTP HEAD), не production-код.
exclude_dirs = ["tests", "multiprocess_prototype_backup", "scripts"]
skips = ["B101", "B110"]  # B101: assert в не-prod; B110: try/except/pass — намеренный best-effort swallow в logging/middleware/router (логирование не должно ронять приложение)

# ── coverage ──
[tool.coverage.run]
source = ["multiprocess_framework"]
omit = [
    "*/tests/*",
    "*/test_*",
    "multiprocess_prototype_backup/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
# fail_under = 60  # раскомментировать когда покрытие достигнет 60%

[tool.ruff]
target-version = "py312"
line-length = 120
# .claude/ — bundled seed-канон (приходит из devseed upgrade), не наш код.
# Без exclude ruff format расходится с upstream-форматом template'а →
# devseed upgrade --dry-run постоянно показывает шумовой diff.
extend-exclude = [".claude/"]

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff.lint.per-file-ignores]
# Условные реэкспорты (try/except ImportError + __all__.extend) — F401 ложноположительный
"multiprocess_framework/modules/frontend_module/widgets/__init__.py" = ["F401"]
"multiprocess_framework/modules/frontend_module/widgets/chrome/__init__.py" = ["F401"]
"multiprocess_framework/modules/data_schema_module/factory/__init__.py" = ["F401"]
"multiprocess_framework/modules/data_schema_module/storage/__init__.py" = ["F401"]
# Backup — frozen snapshot, не трогаем
"multiprocess_prototype_backup/**" = ["F401", "F811", "F841", "E"]
