[project]
name = "inspector-bottles"
version = "0.1.0"
description = "Multiprocess framework for bottle inspection — camera-based defect detection"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Core framework
    "pydantic>=2.13",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.49",  # asyncio extras = greenlet для async-адаптера
    "numpy>=2.4,<3",
    "PyYAML>=6.0",
    "ruamel.yaml>=0.18",  # round-trip YAML с сохранением комментариев (рецепты, app.yaml)
    "psutil>=7.0",
    # GUI (Phase 2 завершена: миграция PyQt5 → PySide6)
    "pyside6>=6.8,<6.11",
    "QDarkStyle>=3.2",
    # Node graph editor (Phase 9) — fork от C3RV1 для PySide6, гибридный режим
    "NodeGraphQt",
    "Qt.py>=1.4",  # транзитивная зависимость NodeGraphQt
    # Vision / image
    "opencv-python>=4.13,<5",
    "Pillow>=12.0",
    # Data / plotting
    "pandas>=2.2",
    "matplotlib>=3.9",
    "plotly>=5.24",
    "seaborn>=0.13",
    "openpyxl>=3.1",
    # Camera (GigE Vision) — нет ARM-колёс genicam, пропускаем на macOS ARM
    "harvesters>=1.4; sys_platform != 'darwin' or platform_machine != 'arm64'",
    # Auth
    "bcrypt>=4.1",
    # Logging
    "loguru>=0.7",
    # Network / utils
    "requests>=2.32",
    "environs>=11.0",
    # Config hot-reload (ConfigFileWatcher → observability hot-reload)
    "watchdog>=4.0",
    # Simulation
    "pygame>=2.6",
    # Async testing — было в стейл inner pyproject
    "pytest-asyncio>=0.24",
    "setuptools>=82.0.1",
]

[project.scripts]
# Единая команда запуска: venv-guard (run:launch) → main → главный конфиг app.yaml.
inspector = "multiprocess_prototype.run:launch"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.24",
    "pytest-qt>=4.4", # qt_api = "pyside6", фикстура qtbot
    "pytest-cov>=6.0", # coverage-отчёты
    "ipykernel>=6.29",
    "aiosqlite>=0.20", # для тестов async SQL-адаптера
    "pyright>=1.1.408", # gradual type checking (replaces mypy)
    "ruff>=0.15", # linter + formatter (pre-commit ставит свой, дублируем для make lint без активной venv)
    "bandit>=1.9", # security scanning (OWASP basics)
    "pre-commit>=4.6.0",
    "qt-mcp",
]
diagrams = [
    "pylint>=3.3",      # pyreverse для UML-диаграмм классов
    "pydeps>=3.0",      # граф зависимостей модулей
]

[project.optional-dependencies]
# ML inference stack (Services/ml_inference). Backend ONNX Runtime — основной:
# кросс-форматный, лёгкий, CPU/CUDA через providers. onnx нужен для валидации
# .onnx и генерации dummy-моделей в тестах (CI/headless без реальных весов).
ml = [
    "onnxruntime>=1.20",
    "onnx>=1.17",
]
# torch-backend (torchvision MobileNetV3 / .pt веса) — опциональный, тяжёлый.
# Ставится отдельно: pip install '.[ml-torch]'
ml-torch = [
    "torch>=2.11",
    "torchvision>=0.26",
]
# Обучение моделей (Services/ml_train): torch + timm (MobileNetV4 и сотни
# архитектур отсутствуют в torchvision) + onnx для экспорта в ml_inference.
# GPU-сборка torch (CUDA) — по инструкции pytorch.org под драйвер стенда.
ml-train = [
    "torch>=2.11",
    "torchvision>=0.26",
    "timm>=1.0",
    "onnx>=1.17",
]

# Modbus-драйвер (Services/modbus) — опциональный.
# pymodbus тянет pyserial для RS485 (RTU). Без extra драйвер импортируется,
# но реальное подключение требует установки: pip install '.[modbus]'
modbus = [
    "pymodbus>=3.7",
]

[tool.uv.sources]
# NodeGraphQt-PySide6 — fork от C3RV1, не публикуется на PyPI.
# Sha-pin для воспроизводимости (последний коммит на master 2023-01-08).
NodeGraphQt = { git = "https://github.com/C3RV1/NodeGraphQt-PySide6.git", rev = "7fa60017" }
qt-mcp = { git = "https://github.com/0xCarbon/qt-mcp.git" }

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = [
    "multiprocess_framework/refactored",
    "multiprocess_framework/modules/state_store_module/tests",
    "multiprocess_prototype/tests",
    "multiprocess_prototype/state_store/tests",
]
norecursedirs = [".git", "__pycache__", ".venv"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    # Live-тесты против headless-бэкенда (BackendHarness, Ф1 Task 1.3): поднимают систему
    # прототипа. НЕ в testpaths (дефолтный прогон их не собирает) — запуск явным путём:
    #   python -m pytest backend_ctl -m harness_smoke
    "harness_smoke: live-тесты, поднимающие headless-бэкенд прототипа через BackendHarness",
]
filterwarnings = [
    # Task F.7 (Phase F / cross-tab): forcing-функция против регрессии. Прямой
    # ctx.extras[...]/get() с мигрированным ключом из потребителя (презентер/таб) валит тест
    # → используй services.X (AppServices). Легитимный bridge (build_app_services + аксессоры
    # AppContext) читает через ctx.extras.peek()/peek_required() и не триггерит warning.
    # ВАЖНО: фильтр по ТЕКСТУ сообщения, а не module-scoped: warning эмитится со stacklevel=3
    # и атрибутируется вызывающему модулю, а не _deprecated_extras (старый фильтр был no-op).
    'error:ctx\.extras.*deprecated:DeprecationWarning',
]
qt_api = "pyside6"

# ── pyright ──
# Запуск:  pyright multiprocess_framework multiprocess_prototype
# Режимы:  basic (старт) → standard → strict — повышать по мере чистки типов.
# Подробнее: https://microsoft.github.io/pyright/#/configuration
#
# Gradual-стратегия (см. pyright_report.json после первого прогона, ~700 диагностик):
#   - "none"     — шумные правила, ловящие не баги, а особенности PySide6/динамики
#   - "warning"  — реальные подозрения на баги, не блокируем CI пока не разгребём
#   - "error"    — добавлять по мере чистки долга
[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "All"
include = ["multiprocess_framework", "multiprocess_prototype"]
exclude = [
    "**/tests",
    "**/__pycache__",
    "**/.venv",
]
typeCheckingMode = "basic"
# ── stubs / impport ──
reportMissingImports = "warning"       # аналог mypy.ignore_missing_imports
reportMissingTypeStubs = "none"        # PySide6 / OpenCV / Ultralytics — без стабов
# ── шум PySide6 / mixin / register schemas ──
reportAttributeAccessIssue = "none"    # 388 hits: Qt signals, mixin attrs, dynamic schemas
reportOptionalMemberAccess = "none"    # 79 hits: Optional[X] без unwrap (на границах GUI)
reportOptionalSubscript = "none"
reportOptionalCall = "none"
reportUnsupportedDunderAll = "none"    # условный re-export __all__.extend(...)
# ── подозрения на баги — warning, не падаем ──
reportArgumentType = "warning"
reportReturnType = "warning"
reportCallIssue = "warning"
reportInvalidTypeForm = "warning"
reportIndexIssue = "warning"
reportAssignmentType = "warning"
reportGeneralTypeIssues = "warning"
reportUnboundVariable = "warning"

# ── bandit ──
[tool.bandit]
# scripts/ — dev-утилиты (changelog_gen, link_check, validate_commit, …);
# subprocess/urllib в них by design (git log, HTTP HEAD), не production-код.
exclude_dirs = ["tests", "scripts"]
skips = ["B101", "B110"]  # B101: assert в не-prod; B110: try/except/pass — намеренный best-effort swallow в logging/middleware/router (логирование не должно ронять приложение)

# ── coverage ──
[tool.coverage.run]
source = ["multiprocess_framework"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
# fail_under = 60  # раскомментировать когда покрытие достигнет 60%

[tool.ruff]
target-version = "py312"
line-length = 120
# .claude/ — bundled seed-канон (приходит из devseed upgrade), не наш код.
# Без exclude ruff format расходится с upstream-форматом template'а →
# devseed upgrade --dry-run постоянно показывает шумовой diff.
extend-exclude = [".claude/"]

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff.lint.per-file-ignores]
# Условные реэкспорты (try/except ImportError + __all__.extend) — F401 ложноположительный
"multiprocess_framework/modules/frontend_module/widgets/__init__.py" = ["F401"]
"multiprocess_framework/modules/frontend_module/widgets/chrome/__init__.py" = ["F401"]
"multiprocess_framework/modules/data_schema_module/factory/__init__.py" = ["F401"]
"multiprocess_framework/modules/data_schema_module/storage/__init__.py" = ["F401"]
