[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "inspector-prototype"
version = "0.1.0"
description = "Multiprocess Framework — распределённое приложение на одной машине"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "numpy>=1.20",
    "PyQt5>=5.15.0",
    "opencv-python>=4.5.0",
    "Pillow>=9.0.0",
    "pyyaml>=6.0.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["multiprocess_framework*", "multiprocess_prototype*", "multiprocess_prototype_v3*"]

# Unit-тесты пакетов multiprocess_framework/modules не входят в testpaths ниже:
# у модулей плоские импорты; запуск — см. multiprocess_framework/README.md (Testing)
# и скрипт scripts/run_framework_tests.py

[tool.pytest.ini_options]
testpaths = ["multiprocess_framework/refactored", "multiprocess_prototype/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
